# NBForge

./: .gitignore  README.md  notes.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
examples/input/: cold_email_generator.ipynb  sample_data.csv  sample_data_processing.ipynb  sample_data_processing_fastapi.ipynb  sample_data_processing_streamlit.ipynb  sample_notebook.ipynb  sample_notebook_1.ipynb
examples/output/cold_email_generator/: README.md  chroma_db_client.py  llm_client.py  main.py  prompt_template.py  requirements.txt  setup.md  web_scraper.py
examples/output/sample_data_processing/: README.md  SETUP.md  data_cleaner.py  data_loader.py  data_preprocessor.py  data_splitter.py  main.py  model_evaluator.py  model_trainer.py
examples/output/sample_data_processing_fastapi/: README.md  SETUP.md  data_processor.py  main.py
examples/output/sample_data_processing_streamlit/: app.py  data_processing.py  linear_regression.py  sample_data.csv
examples/output/sample_date_processing_streamlit/: README.md  SETUP.md
examples/output/sample_notebook/: README.md  data_operations.py  greet.py  main.py  setup.md
examples/output/simple_data_processing/: README.md  data_cleaner.py  data_loader.py  data_splitter.py  main.py  model_evaluator.py  model_trainer.py
src/: chains.py  converter.py  groq_client.py  parser.py  writer.py
src/nbforge/: chains.py  cli.py  converter.py  groq_client.py  logger.py  package-lock.json  parser.py  writer.py
src/utils/: constants.py  prompts.yml
