[project]
name = "nbforge"
version = "0.1.0"
description = "Convert Jupyter notebooks into structured Python projects , Streamlit app or FastAPI app."
authors = [
  { name="Ankit Das", email="ankitdas.cg22@gmail.com" }
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.0"
]

[project.scripts]
nbforge = "nbforge.cli:main"
